fix(test): daemon threads, so a stuck test fails instead of hanging the build
CI sat on "> Task :test" for thirty-nine minutes and had to be cancelled by hand.
The cause was not the test that blocks: it was that nothing could exit. Thirteen
threads were created across the suite and not one was a daemon, so a worker left
behind - a party that never reached a CyclicBarrier, or an executor a test never
shut down - keeps the test JVM alive after every test has finished. Gradle then
waits on a JVM that cannot die, and the run has no failure to report.

The same suite passed in 87 seconds on the previous commit, which is what a
hang of this shape looks like: it depends on who loses the race, so it is
invisible until a slower machine runs it.

Daemon threads everywhere, and a 20 minute timeout on the test task so that a
future hang fails the build instead of waiting out the six-hour job limit.